@@ -56,6 +56,8 @@ public class TestHttpClientConfig
                 .setMaxConnectionsPerServer(20)
                 .setMaxRequestsQueuedPerDestination(1024)
                 .setMaxContentLength(new DataSize(16, MEGABYTE))
+                .setRequestBufferSize(new DataSize(4, KILOBYTE))
+                .setResponseBufferSize(new DataSize(16, KILOBYTE))
                 .setSocksProxy(null)
                 .setKeyStorePath(System.getProperty(JAVAX_NET_SSL_KEY_STORE))
                 .setKeyStorePassword(System.getProperty(JAVAX_NET_SSL_KEY_STORE_PASSWORD))
@@ -100,6 +102,8 @@ public class TestHttpClientConfig
                 .put("http-client.max-connections-per-server", "3")
                 .put("http-client.max-requests-queued-per-destination", "10")
                 .put("http-client.max-content-length", "1MB")
+                .put("http-client.request-buffer-size", "42kB")
+                .put("http-client.response-buffer-size", "43kB")
                 .put("http-client.socks-proxy", "localhost:1080")
                 .put("http-client.secure-random-algorithm", "NativePRNG")
                 .put("http-client.https.included-cipher", "TLS_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA")
@@ -141,6 +145,8 @@ public class TestHttpClientConfig
                 .setMaxConnectionsPerServer(3)
                 .setMaxRequestsQueuedPerDestination(10)
                 .setMaxContentLength(new DataSize(1, MEGABYTE))
+                .setRequestBufferSize(new DataSize(42, KILOBYTE))
+                .setResponseBufferSize(new DataSize(43, KILOBYTE))
                 .setSocksProxy(HostAndPort.fromParts("localhost", 1080))
                 .setKeyStorePath("key-store")
                 .setKeyStorePassword("key-store-password")
